# SynthMakr

./: .gitmodules  CMakeLists.txt  README.md
include/: Filter.hpp  MenuButton.hpp  Modules.hpp  Parameter.hpp  Synth.hpp  Unit.hpp  Utils.hpp  pch.hpp
libs/: CMakeLists.txt
source/: EntryPoint.cpp  Modules.cpp  Synth.cpp
